--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,8 @@ steps:
 - script: |
     npm install -g @angular/cli
     npm install
+    npm install express --save
+    npm install nodemon --save-dev
    
   displayName: 'npm install and build'
 - task: AzureRmWebAppDeployment@4
